--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
-
+theme: jekyll-theme-minimal
+title: The 26th IEEE Conference on Distributed Intelligence in Chemical Engineering (ICDIC)
+description: Bookmark this to keep an eye on my project updates!
